# vibe-quant

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  dev.sh  manifest  pyproject.toml  tmp228lamsu.db  tmp29aqndiy.db  tmp5usls_i8.db  tmp6jhwwx1_.db  tmp_1onnw9v.db  tmpa_vb6eaj.db  tmpb4txs785.db  tmpc6nrv2d2.db  tmpekd6kp9s.db  tmpflvf23qq.db  tmpg1nfmsn8.db  tmpgi6zdgd4.db  tmpgnjdsqxl.db  tmpidiy68_r.db  tmpj8p545b6.db  tmpj9f2wrkg.db  tmpke4uuy0z.db  tmpki1w2wjd.db  tmpmiovw4g0.db  tmpn8fsgcsf.db  tmpp0hqjfx9.db  tmpp6ghuug0.db  tmppbrcj58j.db  tmpre4bmf5b.db  tmprt_16b2_.db  tmpv1_bgdqc.db  tmpw4vm6rk4.db  tmpx8s51rf0.db  tmpxci8vf0e.db  tmpxpoiw_ju.db  tmpxzjihi5y.db
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.streamlit/: config.toml
data/: .gitkeep
docs/: architecture.md  crypto-trading-bot-specification.md  discovery-journal-1m.md  discovery-journal.md  gpt-research.md  opus-prd.md  opus-research.md  opus-spec.md
docs/claude/: conventions.md
docs/discovery-results/: 2026-02-25-all-discovery-findings.md  2026-02-25-best-strategy-run4.md  2026-03-20-1m-short-champions-bull-run.md
docs/plans/: 2026-02-05-code-review-fixes.md  2026-02-18-react-frontend-migration.md  2026-02-19-feature-parity-audit.md  2026-02-19-shadcn-ui-integration-design.md  2026-02-19-shadcn-ui-migration.md  regime_cross_example.yaml  (+7 more)
frontend/: .gitignore  Makefile  biome.json  index.html  openapi.json  orval.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
pytest-of-verebelyin/: pytest-current
reviews/: alerts.md  beads.md  dashboard.md  data.md  db.md  discovery.md  dsl.md  ethereal.md  jobs.md  logging.md  overfitting.md  paper.md  project_config.md  risk.md  root.md  screening.md  strategies.md  tests.md  validation.md
scripts/: check_quality_blocking.sh  check_quality_style_debt.sh  paper_reconciliation.py  regime_cross_campaign.py
tests/: __init__.py  conftest.py
vibe_quant/: __init__.py  __main__.py  metrics.py  reconciliation.py  utils.py
(+1118 files in other folders)
