[project]
name = "vibe-quant"
version = "0.1.0"
description = "Algorithmic trading engine for crypto perpetual futures using NautilusTrader"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "nautilus_trader>=1.222.0,<1.223.0",
    "pandas-ta-classic>=0.1.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "duckdb>=1.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "hypothesis>=6.100.0",
]

[project.scripts]
vibe-quant = "vibe_quant.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vibe_quant"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "nautilus_trader",
    "nautilus_trader.model.currencies",
    "nautilus_trader.model.data",
    "nautilus_trader.model.enums",
    "nautilus_trader.model.identifiers",
    "nautilus_trader.model.instruments",
    "nautilus_trader.model.objects",
    "nautilus_trader.persistence.catalog",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas_ta", "pandas_ta.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["vibe_quant"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
